crates/credential/tests/probes/sealed_capability_third_party.stderr
error[E0277]: the trait bound `ThirdPartyLiar: Refreshable` is not satisfied
   --> tests/probes/sealed_capability_third_party.rs:129:49
    |
129 |     let _ = RefreshDispatcher::for_credential::<ThirdPartyLiar>();
    |                                                 ^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Refreshable` is not implemented for `ThirdPartyLiar`
   --> tests/probes/sealed_capability_third_party.rs:55:1
    |
 55 | struct ThirdPartyLiar;
    | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `Refreshable` is implemented for `OAuth2Credential`
   --> src/credentials/oauth2.rs
    |
    | impl Refreshable for OAuth2Credential {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `RefreshDispatcher::for_credential`
   --> tests/probes/sealed_capability_third_party.rs:120:26
    |
120 |     fn for_credential<C: Refreshable>() -> Self {
    |                          ^^^^^^^^^^^ required by this bound in `RefreshDispatcher::for_credential`
